flask/static/css/style.css
:root {
    /*--text-color: #C9D1D9;*/
    --core-visuals-width:900px;
    --bold-weight: 600;
    --list-line-height: 1.5;
    --line-height: 1.5;
    --paragraph-bottom-margin: 1rem;
    --font-size: 1em;

    background-color: var(--background-color);
}

html {
    --text-color: #c9c9c9;
    --card-header-text-color: #7c7c7c;
    --less-emphasis-color: #5c5c5c;
    --background-color: #101010;
    --card-border-color: #1f1f1f;
    --skeleton-background-color: #111111;
    --card-background-color: #141414;
    --tooltip-background-color: #bdbdbd;
    --tooltip-text-color: #202020;
    --navbar-text-background-color: #1a1a1a;

    --blue: #517affff;

    --card-border-radius: 25px
}

body {
    font-size: var(--font-size);
    background-color: var(--background-color) !important;
    color: var(--text-color) !important;
    font-family: 'Open Sans', sans-serif !important;   
    margin: 0;
}

@font-face {
  font-family: "Open Sans";
  font-style: normal;
  font-weight: 300 800;
  font-stretch: 100%;
  src: url("/static/fonts/OpenSans.woff2") format('woff2');
}

a {
    text-decoration: none;
    color: var(--text-color);
}

/* navbar */

.navbar {
    display: grid;
    position: fixed;
    left: 0;
    top: 0;
    /* container has no padding, so subtract (navbar margin + navbar padding) */
    width: calc(50vw - 450px - 4rem); 
    grid-template-rows: repeat(4, max-content);
    height: max-content;
    margin: 2rem;
    margin-top: 5rem;
    justify-content: flex-end;
    padding-top: 3.6rem;
    row-gap: 1rem;
}

.title-div {
    visibility: hidden;
    display: grid;
    grid-template-columns: 1fr max-content;
    align-items: baseline;
}

.title-and-icon {
    display: grid;
    grid-template-columns: 0.01fr 1fr;
    align-items: baseline;
}

.title-container {
    max-width: var(--core-visuals-width);
    margin: 0 auto;
    padding: 1rem;
}

.navbar-icon {
    top: 6px;
    position: relative;
}

.navbar-website-text {
    font-size: 2.5rem;
    padding-left: 0.5rem;
    display: flex;
    justify-self: flex-start;
}

.navbar-descriptor {
    justify-content: flex-end;
    display:flex;
}

.navbar-text {
    visibility: hidden;
    /*background: var(--card-background-color);*/
    border-radius: var(--card-border-radius);
    padding: 0px 10px 0px 10px;
    transition: background 0.2s;
    display:grid;
    grid-template-columns: max-content max-content;
    align-items: center;
    justify-content: flex-end;
    column-gap: 1.5rem;
}

.navbar-text:hover {
    background: var(--blue);
    cursor: pointer;
}

.navbar-text-icon {
    max-width: 30px;
    max-height: 30px;
}

.navbar-mobile {
    display: none;
    grid-template-columns: repeat(5, max-content);
    display: grid;
    column-gap: 1rem;
    padding-bottom: 1.5rem;
    padding-top: 1rem;
    row-gap: 1rem;
}

@keyframes blueGlow {
    0% {
        background-color: default;
    }
    100% {
        background-color: var(--blue);
    }
}

/* main content */

.container {
    max-width: var(--core-visuals-width);
    padding-left: 1rem;
    padding-right: 1rem;
    /*padding: 1rem;
    padding-bottom: 2rem;*/
    margin: 0 auto;
}


.visualization-container {
    /*max-width: var(--core-visuals-width);
    padding-left: 1rem;
    padding-right: 1rem;*/
    margin: 0 auto;
    display: grid; /*breaks reflow for highcharts?????*/
    grid-template-rows: 0.2fr 1.6fr auto;
}

.playercount-header {
    visibility: hidden;
    font-size: 2rem;
    line-height: 2.2rem;
    background-clip: content-box;
    border-radius: var(--card-border-radius);
    margin-bottom: 1.5rem;
}

.last-updated {
    justify-content: flex-end; 
    font-size: 0.75rem; 
    display: flex;
    color: var(--less-emphasis-color);
    fill: var(--less-emphasis-color);
    align-items: baseline;
}

.clock-icon {
    width: 20px;
    height: 20px;
    margin-top: auto;
    margin-bottom: auto;
    margin-right: 0.5em;
}


@keyframes glow {
    0% {
        filter: drop-shadow(0px 0px 0px var(--text-color));
    }   
    100% {
        filter: drop-shadow(0px 0px 4px var(--text-color));
    }
}

.tooltip {
    position: relative;
    display: inline;
    padding-left: 8px;
}

.tooltip .tooltip-text {
    visibility: hidden;
    width: max-content;
    font-size: 0.8rem;
    background-color: var(--tooltip-background-color);
    color: var(--tooltip-text-color);
    text-align: center;
    padding: 5px;
    border-radius: 6px;
    position: absolute;
    z-index: 1;
    opacity: 0;
    transition: opacity 0.2s;
    inset-block-start: calc(-48px - 5px);
}

.tooltip:hover .tooltip-text {
    visibility: visible;
    opacity: 1;
}

.question-informative {
    max-width: 24px;
    max-height: 24px;
    width: 24px;
    height: 24px;
    fill: var(--text-color);
    transition: transform 0.2s;

}


.question-informative:hover {
    animation: glow 0.2s forwards;
    cursor: pointer;
    transform: scale(1.1);
}



/* top statistics */

.one-stat-grid {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    column-gap: 2rem;
    row-gap:2rem;
    padding-bottom: 1.5rem;
}

.card {
    min-height: 91.333px;
    border: none;
    border-radius: var(--card-border-radius);
    display: flex;
    padding: 20px 30px 10px 30px;
    /*background-color: var(--card-background-color);*/
    display: grid;
    grid-template-rows: 20% 80%;
    align-items: center;
    justify-content: center;
}

.card-header-text {
    visibility: hidden;
    font-size: 0.75rem;
    color: var(--card-header-text-color);
}

.card-content {
    display: flex;
    align-items: center;
    margin: 0 auto;
}

#server-status {
    max-width: 40px;
    max-height: 40px;

}

.server-up-emoji, .not-sure-yet {
    transform-origin: center; 
    max-width: inherit; 
    max-height: inherit;
    transition: transform 0.2s;
}

@keyframes growFromCenter {
    0% {
        opacity: 0;
        transform: scale(0);
    }
    100% {
        opacity: 1;
        transform: scale(1);
    }
}

.server-up-emoji:hover, .not-sure-yet:hover {
    transform: scale(1.15);
    cursor: pointer;
}

.server-up-emoji:active, .not-sure-yet:active {
    transform: scale(0.8);
}

#players-online {
    font-size: 1.9rem;
}

#players-weekly-change {
    font-size: 1.25rem;
}

.percent-change-icon {
    margin-left: 0.25rem;
}

#not-sure-yet {
    display: hidden;
    max-width: 35px;
    max-height: 35px;

}

#players-last-updated {
 /**/
}

/* playercount chart */

.chart-skeleton {
    max-width: 900px; 
    max-height: 400px; 
    aspect-ratio: 2.4 / 1; 
    border: none;
    border-radius: var(--card-border-radius);
    /* chart reflow fix if parent is grid: https://github.com/highcharts/highcharts/issues/9491#issuecomment-605965402 */
    display: grid; 
    width: 100%;
    height: 100%;
    
}

/*
.chart-skeleton::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    background: linear-gradient(90deg, transparent, rgba(124, 124, 124, 0.5), transparent);
    transform: translateX(-100%);
    animation: loading 2s infinite;
}
    */

@keyframes loading {
    0% { background-position: 100% 0; }
    100% { background-position: -100% 0; }
    /*0% {
        transform: translateX(-100%);
    }
    100% {
        transform: translateX(100%);
    }*/
}

#playercount-chart, #review-chart {
    /* try for mobile, maybe it will break desktop*/
    /*overflow: hidden;
    max-height: 400px;*/
    max-width: auto;
    border-radius: var(--card-border-radius);
    
}

.title-div-wrapper {
    display:grid;
}

/* title-div wrapper: show background but not text, visibility: hidden hides background 
don't put background wrapper children in here
*/
.chart-skeleton, .card, .playercount-chart-header, .title-div-wrapper, .navbar-text-wrapper {
    border-radius: var(--card-border-radius);
    background: linear-gradient(90deg, var(--skeleton-background-color) 25%, #23232355 50%, var(--skeleton-background-color) 51%);
    animation: loading 1.7s linear infinite normal;
    background-size: 200% 100%;
}

@font-face {
  font-family: 'icons';
  src: url('/static/fonts/icons.woff') format('woff');
  font-weight: normal;
  font-style: normal;
  font-display: block;
}

[class^="i-"], [class*=" i-"] {
  /* use !important to prevent issues with browser extensions that change fonts */
  font-family: 'icons' !important;
  speak: never;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;

  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.i-youtube-play:before {
  content: "\e900";
}
.i-soundcloud:before {
  content: "\e901";
}
.i-spotify:before {
  content: "\e902";
}
.i-bandcamp:before {
  content: "\e903";
}
.i-github:before {
  content: "\e904";
}
.i-linkedin-square:before {
  content: "\e905";
}
.i-arrow-up-right2:before {
  content: "\ea3b";
}

.i-github {
    font-size: 30px; padding-left: 2.14165px; padding-right: 2.14165px;
}

/* navbar overflows */
@media screen and (max-width: 1350px) {
    .navbar {
        display: none;
    }
    .navbar-mobile {
        display: grid;
    }
}

@media screen and (max-width: 770px) {
    .navbar-mobile {
        grid-template-columns: repeat(3, max-content);
    }
    .title-div {
        grid-template-columns: none;
        grid-template-rows: repeat(2, max-content);
        row-gap: 0.5rem;
        justify-content: flex-start;
    }
    .navbar-website-text {
        font-size: calc(1.2rem + 2.182vw);
    }
    .navbar-icon {
        top: 1vw;
        width: max(30px, 5vw);
    }
    .navbar-descriptor, .navbar-text {
        font-size: calc(0.5rem + 1.039vw);
    }
    .navbar-text-icon {
        font-size: calc(1.948vw + 0.9rem);
        width: calc(1.948vw + 0.9rem);
    }
    #players-online {
        font-size: calc(0.475rem + 2.961vw);
    }
    .one-stat-grid {
        grid-template-columns: repeat(2, 1fr);
        justify-items: center;
    }
    .card {
        width: 80%;
    }
    .playercount-header {
        font-size: calc(1rem + 2.078vw);
    }
    .question-informative {
        width: calc(12px + 1.55844vw);
        height: calc(12px + 1.55844vw);
    }
    .chart-skeleton {
        aspect-ratio: 1.3 / 1;
    }
    #players-weekly-change {
        font-size: calc(0.625rem + 1.2985vw);
    }
    .last-updated {
        font-size: calc(0.325rem + 0.779vw);
    }
    .clock-icon {
        width: calc(10px + 1.2987vw);
        height: calc(10px + 1.2987vw);
    }
}

@media screen and (min-width: 1350px) {
    .navbar-mobile {
        display: none;
    }
    .navbar { 
        display: grid;
    }
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

